--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
   <link href="{% static 'css/p.css' %}" rel="stylesheet">
 </head>
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+  {% include './components/sidebar.html' %}
 <div class="main-content">
-  {% include './components/navbar.html' %}
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-8">
+      <div class="col-10">
         {% block content %}{% endblock content %}
       </div>
     </div>
