--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -68,7 +68,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark fs-12" href="./docs/changelog.html">
+          <a class="nav-link text-dark fs-12" href="{% url 'categories' %}">
             Communities
           </a>
         </li>
