--- a/templates/communities/latest_community_topics.html
+++ b/templates/communities/latest_community_topics.html
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="col">
           <h1 class="header-title fs-13">
-            {{ community|capfirst }}
+            <a href="{% url 'community' community.slug %}">{{ community|capfirst }}</a>
           </h1>
           <ul class="list-group list-group-horizontal mt-2">
             <li class="list-group-item p-0 px-2 border-0 fs-08">{{community.topic_set.all|length}} topics</li>
@@ -72,7 +72,7 @@
   </div>
   <div class="card-body">
     <div class="list-group list-group-flush my-n3">
-      {% for topic in community.topic_set.all %}
+      {% for topic in topics %}
       <div class="list-group-item px-2 py-4">
         <div class="row align-items-center">
           <div class="col">
