--- a/templates/communities/community.html
+++ b/templates/communities/community.html
@@ -1,5 +1,5 @@
 {% extends '../base.html' %}
-{% load static humanize %}
+{% load static humanize widget_tweaks %}
 {% block title %}Community - {{ community|capfirst }}{% endblock %}
 {% block content %}
 <div class="header mt-4">
@@ -64,6 +64,7 @@
     <button class="btn btn-outline-secondary" type="submit">Search</button>
   </div>
 </form>
+{% if community.topic_set.count > 0 %}
 <div class="card shadow-none">
   <div class="card-header">
     <h4 class="card-header-title">
@@ -77,7 +78,7 @@
         <div class="row align-items-center">
           <div class="col">
             <h1 class="mb-0 fs-11">
-              <a href="" class="">{{topic}}</a>
+              <a href="{% url 'topic' topic.community.slug topic.pk %}" class="">{{topic}}</a>
             </h1>
             <ul class="list-group list-group-horizontal mt-2">
               <li class="list-group-item p-0 px-2 border-0 fs-08">author {{topic.user}}</li>
@@ -85,7 +86,7 @@
             </ul>
           </div>
           <div class="col-auto">
-            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;62 225
+            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{topic.views}}
           </div>
           <div class="col-auto">
             <i class="bi bi-chat-right-fill"></i>&nbsp;&nbsp;&nbsp;&nbsp;2300
@@ -96,4 +97,5 @@
     </div>
   </div>
 </div>
+{% endif %}
 {% endblock content %}
