--- a/templates/topics/new_topic.html
+++ b/templates/topics/new_topic.html
@@ -8,7 +8,7 @@
     <div class="row align-items-end">
       <div class="col">
         <h6 class="header-pretitle">
-          <a href="{% url 'categories' %}">Communities</a>
+          <a href="{% url 'communities' %}">Communities</a>
         </h6>
         <h1 class="header-title fs-12">
           {{community|capfirst}}
