--- a/templates/topics/user_topics.html
+++ b/templates/topics/user_topics.html
@@ -48,7 +48,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">
+              <a href="{% url 'user_communities' user.username %}" class="nav-link">
                 Communities
               </a>
             </li>
