--- a/templates/categories/categories.html
+++ b/templates/categories/categories.html
@@ -3,99 +3,77 @@
 {% block title %}Categories{% endblock %}
 {% block content %}
 <div class="row mt-7">
-<div class="col-12">
-  {% for category in categories %}
-  <h2 class="mb-3">
-    <a href="" class="border-bottom fw-800">
-      {{ category.name|capfirst }}
-    </a>
-  </h2>
-  <p class="text-dark px-2">
-    {{ category.description }}
-  </p>
-  <div class="card shadow-none" data-list="{&quot;valueNames&quot;: [&quot;orders-order&quot;, &quot;orders-product&quot;, &quot;orders-date&quot;, &quot;orders-total&quot;, &quot;orders-status&quot;, &quot;orders-method&quot;]}">
-    <div class="card-header">
-
-    
-      <form>
-        <div class="input-group input-group-flush input-group-merge input-group-reverse">
-          <input class="form-control list-search" type="search" placeholder="Search">
-          <span class="input-group-text">
-            <i class="bi bi-search"></i>
-          </span>
-        </div>
-      </form> 
-      
-
+  <div class="col-12">
+    {% for category in categories %}
+    <h2 class="mb-3">
+      <a href="" class="border-bottom fw-800">
+        {{ category.name|capfirst }}
+      </a>
+    </h2>
+    <p class="text-dark px-2">
+      {{ category.description }}
+    </p>
+    <div class="card shadow-none" data-list="{&quot;valueNames&quot;: [&quot;orders-order&quot;, &quot;orders-product&quot;, &quot;orders-date&quot;, &quot;orders-total&quot;, &quot;orders-status&quot;, &quot;orders-method&quot;]}">
+      <div class="card-header">
+        <form>
+          <div class="input-group input-group-flush input-group-merge input-group-reverse">
+            <input class="form-control list-search" type="search" placeholder="Search">
+            <span class="input-group-text">
+              <i class="bi bi-search"></i>
+            </span>
+          </div>
+        </form>
+      </div>
+      <div class="table-responsive">
+        <table class="table table-sm table-nowrap card-table">
+          <thead>
+            <tr>
+              <th colspan="5">
+                {{ category.communities.all|length }} Communities
+              </th>
+              <th width="50">
+                <a href="#" class="text-body-secondary list-sort" data-sort="orders-total">
+                  Topics
+                </a>
+              </th>
+              <th width="50">
+                <a href="#" class="text-body-secondary list-sort" data-sort="orders-status">
+                  Opinions
+                </a>
+              </th>
+              <th width="50">
+                <a href="#" class="text-body-secondary list-sort" data-sort="orders-status">
+                  Followers
+                </a>
+              </th>
+              <th width="50"></th>
+            </tr> 
+          </thead>
+          <tbody class="list">
+            {% for community in category.communities.all %}
+            <tr>
+              <td class="orders-order" colspan="5">
+                <a href="{% url 'community' community.slug %}" class="fs-1 text-dark">{{community|capfirst}}</a>
+              </td>
+              <td class="orders-product" width="50">
+                {{ community.topic_set.all|length }}
+              </td>
+              <td class="orders-product" width="50">
+                {{ community.answers.all|length }}
+              </td>
+              <td class="orders-product" width="50">
+                {{ community.followed_communities.count }}
+              </td>
+              <td class="orders-product" width="50">
+                {% include 'communities/partials/_follow_button.html' with community=community user=user %}
+            </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
-    <div class="table-responsive">
-      <table class="table table-sm table-nowrap card-table">
- 
-        <thead>
-          <tr>
-            <th colspan="5">
-
-              {{ category.communities.all|length }} Communities
-
-            </th>
-            
-     
-
-            <th width="50">
-              <a href="#" class="text-body-secondary list-sort" data-sort="orders-total">
-                Topics
-              </a>
-            </th>
-            <th width="50">
-              <a href="#" class="text-body-secondary list-sort" data-sort="orders-status">
-                Opinions
-              </a>
-            </th>
-            <th width="50">
-              <a href="#" class="text-body-secondary list-sort" data-sort="orders-status">
-                Followers
-              </a>
-            </th>
-            <th width="50">
-              
-            </th>  
-          </tr> 
-        </thead>
-
-        <tbody class="list">
-          {% for community in category.communities.all %}
-          <tr>
-
-            <td class="orders-order" colspan="5">
-              <a href="{% url 'community' community.slug %}" class="fs-1 text-dark">{{community|capfirst}}</a>
-            </td>
-            <td class="orders-product" width="50">
-              {{ community.topic_set.all|length }}
-            </td>
-            <td class="orders-product" width="50">
-              {{ community.answers.all|length }}
-            </td>
-            <td class="orders-product" width="50">
-              {{ community.followed_communities.count }}
-            </td>
-            <td class="orders-product" width="50">
-              {% if community in user.following_communities.all %}
-              <form method="post" action="{% url 'unfollow_community' community.slug %}">{% csrf_token %}
-                <button type="submit" class="btn btn-sm text-bg-danger-subtle rounded-2">Unfollow</button>
-              </form>
-              {% else %}
-              <form method="post" action="{% url 'follow_community' community.slug %}">{% csrf_token %}
-                <button type="submit" class="btn btn-sm text-success-emphasis bg-success-subtle border border-success-subtle rounded-2">Follow</button>
-              </form>
-              {% endif %}
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
+    {% endfor %}
   </div>
-  {% endfor %}
-</div>
 </div>
 {% endblock content %}
