--- a/templates/search/search_your_topics.html
+++ b/templates/search/search_your_topics.html
@@ -1,11 +1,77 @@
+{% extends '../base.html' %}
 {% load humanize widget_tweaks %}
+{% block content %}
+<div class="header mt-6">
+  <div class="container-fluid">
+    <div class="header-body mt-n5 mt-md-n6">
+      <div class="row align-items-end">
+        <div class="col-auto">
+        {% if user.avatar %}
+          <a href="javascript:void(0)" class="avatar avatar-sm">
+            <img src="{{user.avatar.url}}" alt="..." class="avatar-img rounded-circle">
+          </a>
+          {% else %}
+          <div class="avatar avatar-sm">
+            <span class="avatar-title rounded-circle">{{user.username|slice:":2"}}</span>
+          </div>
+        {% endif %}
+        </div>
+        <div class="col mb-3 ms-n3 ms-md-n2">
+          <h6 class="header-pretitle">
+            Rank
+          </h6>
+          <h1 class="header-title fs-12">
+            {{user.username}}
+          </h1>
+        </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col">
+          <ul class="nav nav-tabs nav-overflow header-tabs">
+            <li class="nav-item">
+              <a href="{% url 'user_topics' user.username %}" class="nav-link active">
+                Topics
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="profile-groups.html" class="nav-link">
+                Bookmarks
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="profile-projects.html" class="nav-link">
+                Saved 
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">
+                People
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'user_communities' user.username %}" class="nav-link">
+                Communities
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<form action="{% url 'search_user_topics' user.username %}" method="get" class="mt-4">
+  <div class="input-group mb-3">
+    <input type="search" name="q" value="{{ request.GET.q|default:'' }}" placeholder="Search your topics" class="form-control" autocomplete="off">
+    <button class="btn btn-outline-secondary" type="submit">Search</button>
+  </div>
+</form>
 <div id="topics">
   {% for topic in topics %}
   <div id="topic-{{ topic.slug }}" class="card shadow-none mt-0 mb-0 border-bottom-0 rounded-0 px-3 py-2">
     <div class="card-body pt-0">
       <div class="card-header mb-2 border-0 px-0">
         <h3 class="me-auto header-title fw-800 mt-3 fs-11">
-          {{topic.title}}
+          {{topic.search_title_highlight|safe}}
         </h3>
         <div class="dropdown">
           <a href="javascript:;" class="dropdown-ellipses dropdown-toggle show" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="las la-ellipsis-h la-lg text-dark"></i></a>
@@ -24,7 +90,7 @@
         </div>
       </div>
       <div class="fs-11 overflow-auto">
-        {{ topic.content|safe }}
+        {{ topic.search_content_highlight|safe }}
       </div>
       <div class="mb-0 mt-4">
         <div class="row">
@@ -83,3 +149,4 @@
   </div>
   {% endfor %}
 </div>
+{% endblock content %}
